--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-pull-to": "^0.1.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
